Added images for Stories of the Land modal

--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
         <div class="card-group">
 
             <div class="card border border-black border-1 project-card" style="width: 18rem;">
-                <img src="/media/FoodFinder2.png" class="card-img-top" alt="...">
+                <img src="/media/Stories1.png" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                     <h5 class="card-title"><i class="bi bi-star-fill text-warning"></i> Stories of the Land <i
                             class="bi bi-star-fill text-warning"></i></h5>
@@ -167,16 +167,22 @@
                 <div id="sotlModalCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/media/MTGAPI1.png" class="d-block w-100" alt="...">
+                            <img src="/media/Stories1.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/media/MTGAPI2.png" class="d-block w-100" alt="...">
+                            <img src="/media/Stories2.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/media/MTGAPI3.png" class="d-block w-100" alt="...">
+                            <img src="/media/Stories3.png" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/media/MTGAPI4.png" class="d-block w-100" alt="...">
+                            <img src="/media/Stories4.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/media/Stories5.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/media/Stories6.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#sotlModalCarousel"
@@ -405,7 +411,7 @@
 <footer class="bg-dark text-light py-2">
     <div class="container text-center">
         <p>Made by Jett Bolen using Bootstrap and Bootswatch</p>
-        <p>Last Edited: 2024-04-15 9:42 AM</p>
+        <p>Last Edited: 2024-04-18 9:42 AM</p>
     </div>
 </footer>
 
