Added some images and fixed the github link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             background: var(--portfolio-gradient-subtle);
         }
 
-        
+
 
     </style>
 </head>
@@ -68,14 +68,15 @@
                     <a class="nav-link" href="https://www.linkedin.com/in/jett-bolen/"> <i class="bi bi-linkedin"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/Moleman114"> <i class="bi bi-github"></i></a>
+                    <a class="nav-link" href="https://github.com/jettbolen"> <i class="bi bi-github"></i></a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-
+<!-- Fix this later -->
+<!-- <img class="rounded mx-auto d-block rounded-5 mt-3" src="media/Me.jpg" alt="Me.jpg" width="15%" height="15%"/> -->
 
 <div class="container py-5">
         <div class="p-3 subtle-color rounded-top-3 shadow">
@@ -139,7 +140,7 @@
 <footer class="bg-dark text-light py-2">
     <div class="container text-center">
         <p>Made by Jett Bolen using Bootstrap and Bootswatch</p>
-        <p>Last Edited: 2024-04-18 8:00 AM</p>
+        <p>Last Edited: 2024-04-19 4:15 PM</p>
     </div>
 </footer>
 
