--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
                             class="bi bi-linkedin"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/Moleman114"> <i class="bi bi-github"></i></a>
+                    <a class="nav-link" href="https://github.com/jettbolen"> <i class="bi bi-github"></i></a>
                 </li>
             </ul>
         </div>
@@ -366,6 +366,9 @@
                         <div class="carousel-item">
                             <img src="/media/Saskpolyhack2.png" class="d-block w-100" alt="...">
                         </div>
+                        <div class="carousel-item">
+                            <img src="/media/Saskpolyhack3.jpg" class="d-block w-100" alt="...">
+                        </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#saskpolytechModalCarousel"
                             data-bs-slide="prev">
@@ -411,7 +414,7 @@
 <footer class="bg-dark text-light py-2">
     <div class="container text-center">
         <p>Made by Jett Bolen using Bootstrap and Bootswatch</p>
-        <p>Last Edited: 2024-04-18 9:42 AM</p>
+        <p>Last Edited: 2024-04-19 4:15 PM</p>
     </div>
 </footer>
 
